--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,14 @@ html {
 }
 
 
-.carousel-item{
+.carousel-item img{
     width: auto;
     height: auto;
     object-fit: cover;
-    image-responsise;
 }
 
 #carousel_principal {
-    max-height: 400px;
+    max-height: 295px;
     width: 100%;
     overflow: hidden;
 }
@@ -46,7 +45,8 @@ html {
 }
 
 .navbar-nav .nav-link:hover {
-    background-color: azure;
+    background-color: rgb(113, 146, 218);
+    border-radius: 3px;
 }
 
 .navbar-brand:hover {
@@ -54,9 +54,29 @@ html {
     border-radius: 3px;
 }
 
+
 .welc {
     color: white;
     font-style: italic;
+}
+
+.postBlog {
+    color: white;
+}
+
+
+
+
+/********Template Login******/
+
+
+.loginHeader {
+    text-align: left;
+    font-size: 35px;
+}
+
+.form_email {
+    background-color: white;
 }
 
 
